[project]
name = "neurocontext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.9"

dependencies = [
    "matplotlib~=3.8.0",
    "numpy<2",
    "pandas<2.0.0",
    "scikit-learn~=1.3.0",
    "torch~=2.2.0",
    "tqdm>=4.67.1",
    "pycurl>=7.45.0",
]
